--- a/Index.html
+++ b/Index.html
@@ -168,7 +168,7 @@
 
         /* Discover Section */
         .discover-container {
-            margin-top: 50px;
+            margin-top: 55px;
             padding: 8px;
         }
         .discover-title {
@@ -225,7 +225,7 @@
     background: linear-gradient(to right, #004d00, #00b300);
     color: #fff;
     border: 1px solid #ccc;
-    padding: 5px 5px;
+    padding: 5px 2px;
     border-radius: 8px;
     cursor: pointer;
     font-size: 10px;
@@ -240,11 +240,11 @@
 
         /* Category Section */
         .category-container {
-            margin-top: 15px;
+            margin-top: 8px;
             padding: 2px;
         }
         .category-title {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
             margin-bottom: 15px;
             display: flex;
@@ -815,13 +815,13 @@ footer.hide {
 }
 /* Partners Section */
         .partners-container {
-            margin-top: 20px;
+            margin-top: 15px;
             padding: 10px;
         }
 
         .partners-title {
             font-size: 18px;
-            text-align: center;
+            text-align: left;
             font-weight: bold;
             margin-bottom: 15px;
         }
@@ -964,7 +964,7 @@ footer.hide {
     
     <!-- Partners Section -->
     <div class="partners-container">
-        <div class="partners-title">Kannywood Movies</div>
+        <div class="partners-title">Unlimited time deal!</div>
         <div class="partners-scroll" id="partners-scroll"></div>
     </div>
     
@@ -1017,7 +1017,7 @@ footer.hide {
         <span>Unlocked</span>
     </div>
     <div class="nav-icon" onclick="showProfileSection()">
-         <i class="fas fa-th-large"></i>
+         <i class="fab fa-app-store"></i>
         <span>Apps</span>
     </div>
 </footer>
@@ -1029,16 +1029,14 @@ footer.hide {
         videoUrl: "https://iuptelegram.blogspot.com/2025/02/one.html",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "TSANTSAR SO",
-        category: "Love at first sentence 📖💘",
-        description: "A thrilling action-packed adventure.",
-    },
+        category: "Love at first sentence💘",
+    },        
     {
         imgUrl: "https://bitly.cx/JAxKn",
         videoUrl: "https://iuptelegram.blogspot.com/2025/02/me-zanyi-da-ita.html",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "ME ZANYI DA ITA",
         category: "Best Novels",
-        description: "Epic battles and heroic journeys.",
     },
     {
         imgUrl: "https://bitly.cx/0zlN",
@@ -1046,7 +1044,6 @@ footer.hide {
         adUrl: "https://www.effectiveratecpm.com/vuq0mnejn?key=7241c685c3c694f609c9eebacbd85a50",
         title: "DAME AKE ADO",
         category: "Life with Destiny 😥💞",
-        description: "A story of survival and redemption.",
         trending: true, // Mark as trending
     },
     {
@@ -1055,57 +1052,54 @@ footer.hide {
         adUrl: "https://www.effectiveratecpm.com/vuq0mnejn?key=7241c685c3c694f609c9eebacbd85a50",
         title: "KANIN MIJINA",
         category: "Life with Destiny 😥💞",
-        description: "The legend of a warrior's journey.",
         trending: true, // Mark as trending
     },
     {
         imgUrl: "https://bitly.cx/plVPM",
-        videoUrl: "https://youtube.com/embed/SFtKVKoscqA",
+        videoUrl: "https://drive.google.com/drive/folders/1Rav4QE-_qWoPLCXg0Jwsuwpdqc5V2jNI",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
         title: "TASHIN HANKALI",
         category: "Best Novels",
-        description: "A heartwarming tale of love and loss.",
         trending: true, // Mark as trending
     },
     {
-        imgUrl: "https://bit.ly/4gDe4dm",
-        videoUrl: "https://youtube.com/embed/hJzZRl1C8X0",
+        imgUrl: "https://bitly.cx/9wgp",
+        videoUrl: "https://drive.google.com/drive/folders/1bK3z-9hAUWWfLUtQWIpO9MLMSDVigA_8",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "JACK THE GIANT SLAYER",
+        title: "RAYUWATA",
         category: "Best Novels",
-        description: "A classic tale of bravery and courage.",
+        trending: true, // Mark as trending
     },
     {
-        imgUrl: "https://bit.ly/4fwBQqK",
-        videoUrl: "https://youtube.com/embed/BjkncLAZu80",
+        imgUrl: "https://bitly.cx/IeJi4",
+        videoUrl: "https://drive.google.com/drive/folders/1WmfeocTBQSUhzyxp-JCOhJDCmEAjh4sa",
         adUrl: "https://www.effectiveratecpm.com/vuq0mnejn?key=7241c685c3c694f609c9eebacbd85a50",
-        title: "VIKING HUNTRESS",
-        category: "Love at first sentence 📖💘",
-        description: "A fierce warrior's quest for justice.",
+        title: "RAYUWARMU AYAU",
+        category: "Life with Destiny 😥💞",
+        trending: true, // Mark as trending
     },
     {
-        imgUrl: "https://bit.ly/3ZLSaxS",
+        imgUrl: "https://bitly.cx/JR7u",
         videoUrl: "https://youtube.com/embed/UPjyNg1mKAM",
         adUrl: "https://www.effectiveratecpm.com/yj516zqeuh?key=67623d7811021ba7d072604ff121c586",
-        title: "JURASSIC TRIANGLE",
+        title: "MAZAN JIYA",
         category: "Battles & Empires 👑🥷",
-        description: "A prehistoric adventure like no other.",
+        trending: true, // Mark as trending
     },
     {
-        imgUrl: "https://bit.ly/3VSO1am",
+        imgUrl: "https://bitly.cx/InGlx",
         videoUrl: "https://youtube.com/embed/iTNyJse9fdk",
         adUrl: "https://www.effectiveratecpm.com/vuq0mnejn?key=7241c685c3c694f609c9eebacbd85a50",
-        title: "ALIEN INVASION",
-        category: "Dangerous Love 💔🔥",
-        description: "Earth's last stand against an alien threat.",
+        title: "RUWAN BAGAJA",
+        category: "Battles & Empires 👑🥷",
+        trending: true, // Mark as trending
     },
     {
-        imgUrl: "https://bit.ly/3BxGSW6",
-        videoUrl: "https://youtube.com/embed/siFLpeqOWDQ",
+        imgUrl: "https://bitly.cx/UOHgu",
+        videoUrl: "https://iuptelegram.blogspot.com/2025/02/yaro-ne-dasunan-allah-mai-rahma-mai-jin.html",
         adUrl: "https://www.effectiveratecpm.com/vuq0mnejn?key=7241c685c3c694f609c9eebacbd85a50",
-        title: "KNIGHT OF THE DEAD",
-        category: "Dangerous Love 💔🔥",
-        description: "A knight's battle against the undead.",
+        title: "YARO NE",
+        category: "Love at first sentence💘",
     },
     {
         imgUrl: "https://bit.ly/3Pi2GYX",
@@ -1207,6 +1201,7 @@ const shuffleArray = (array) => {
     return array;
 };
 
+
 const createDiscoverSection = () => {
     const discoverScroll = document.getElementById('discover-scroll');
     discoverScroll.innerHTML = '';
@@ -1229,7 +1224,7 @@ const createDiscoverSection = () => {
             <p>${item.description}</p>
         `;
 
-        // Add the "Watch Ad 🔒" button
+        // Add the "Watch Ads 🔒" button
         const button = document.createElement('button');
         const visited = localStorage.getItem(`${item.title}-ad-visited`);
         const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
@@ -1243,9 +1238,9 @@ const createDiscoverSection = () => {
             button.onclick = () => openVideoNav(item.videoUrl, item.title);
         } else {
             // Video is locked
-            button.textContent = 'Watch Ad 🔒';
+            button.textContent = 'Watch Ads 🔒';
             button.style.backgroundColor = '#ff0000';
-            img.onclick = () => showNotification('Please watch the ad to Unlock this Novel.', 'warning');
+            img.onclick = () => showNotification('Please watch the ads to Unlock this Novel.', 'warning');
             button.onclick = () => visitAd(item.title, item.adUrl, button);
         }
 
@@ -1304,7 +1299,7 @@ const showDiscoverAndCategories = () => {
 };
 
 const showTrendingVideos = () => {
-    const trendingData = data.filter(item => item.trending); // Filter trending videos
+    const trendingData = shuffleArray(data.filter(item => item.trending)); // Shuffle trending videos
     const gridContainer = document.getElementById('grid-container');
     gridContainer.innerHTML = '';
 
@@ -1330,15 +1325,11 @@ const showTrendingVideos = () => {
     };
     gridContainer.appendChild(backButton);
 
-    // Add trending videos to the grid
-    if (trendingData.length > 0) {
-        trendingData.forEach(item => {
-            const frame = createFrame(item);
-            gridContainer.appendChild(frame);
-        });
-    } else {
-        showNotification('No trending videos found.', 'warning');
-    }
+    // Add shuffled trending videos to the grid
+    trendingData.forEach(item => {
+        const frame = createFrame(item);
+        gridContainer.appendChild(frame);
+    });
 };
 
 const showProfileSection = () => {
@@ -1370,7 +1361,7 @@ const showProfileSection = () => {
     // Add profile content
     const profileContent = [
         {
-            name: "PalmPay - Transfers, Bills, Rewards",
+            name: "PalmPay - Transfers, Bills,",
             description: "Money transfers, pay for airtime and bills, earn rewards.",
             link: "https://link.palmpay.com/828uc",
             icon: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_6zFCuqWj00YpgpbbMr-8Mx7hycUWdg-5McXnyYoWDA&s",
@@ -1414,7 +1405,7 @@ const showProfileSection = () => {
 };
 
 const showHomeVideos = () => {
-    const homeData = data; // Use the entire data array for home videos
+    const homeData = shuffleArray(data); // Shuffle all videos for the Home section
     const gridContainer = document.getElementById('grid-container');
     gridContainer.innerHTML = '';
 
@@ -1440,25 +1431,15 @@ const showHomeVideos = () => {
     };
     gridContainer.appendChild(backButton);
 
-    // Add home videos to the grid
-    if (homeData.length > 0) {
-        homeData.forEach(item => {
-            const frame = createFrame(item);
-            gridContainer.appendChild(frame);
-        });
-    } else {
-        showNotification('No home videos found.', 'warning');
-    }
+    // Add shuffled home videos to the grid
+    homeData.forEach(item => {
+        const frame = createFrame(item);
+        gridContainer.appendChild(frame);
+    });
 };
 
 const showUnlockedVideos = () => {
-    const unlockedData = data.filter(item => {
-        const visited = localStorage.getItem(`${item.title}-ad-visited`);
-        const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
-        const currentTime = Date.now();
-        return visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7400000; // Check if video is unlocked
-    });
-
+    const unlockedData = getUnlockedVideos(); // Get unlocked videos in original order
     const gridContainer = document.getElementById('grid-container');
     gridContainer.innerHTML = '';
 
@@ -1573,9 +1554,9 @@ const createFrame = (item) => {
         button.onclick = () => openVideoNav(item.videoUrl, item.title); // Open URL directly
     } else {
         // Video is locked
-        button.textContent = 'Watch Ad 🔒';
+        button.textContent = 'Watch Ads 🔒';
         button.style.backgroundColor = '#ff0000';
-        img.onclick = () => showNotification('Please Watch the Ad to Unlock this Novel.', 'warning');
+        img.onclick = () => showNotification('Please Watch the Ads to Unlock this Novel.', 'warning');
         button.onclick = () => visitAd(item.title, item.adUrl, button);
     }
 
@@ -1731,12 +1712,12 @@ const updateHistoryList = () => {
             img.onclick = () => openVideoNav(item.videoUrl, item.title);
         } else {
             // Video is locked
-            button.textContent = 'Watch Ad 🔒';
+            button.textContent = 'Watch Ads 🔒';
             button.style.backgroundColor = '#ff0000';
             button.onclick = () => visitAd(item.title, item.adUrl, button);
 
             // Add click event to the image to show a notification
-            img.onclick = () => showNotification('Please Watch the Ad to Unlock this Novel.', 'warning');
+            img.onclick = () => showNotification('Please Watch the Ads to Unlock this Novel.', 'warning');
         }
 
         historyItem.appendChild(img);
@@ -1856,6 +1837,15 @@ const closeNav = () => {
     document.getElementById('video-player').src = '';
 };
 
+const getUnlockedVideos = () => {
+    return data.filter(item => {
+        const visited = localStorage.getItem(`${item.title}-ad-visited`);
+        const unlockTime = localStorage.getItem(`${item.title}-unlock-time`);
+        const currentTime = Date.now();
+        return visited && unlockTime && (currentTime - parseInt(unlockTime)) < 7400000; // Check if video is unlocked
+    });
+};
+
 const checkAndLockVideos = () => {
     data.forEach((item) => {
         const visited = localStorage.getItem(`${item.title}-ad-visited`);
@@ -1909,7 +1899,7 @@ setTimeout(() => {
     { 
         img: "https://img.youtube.com/vi/22w7z_lT6YM/maxresdefault.jpg", 
         title: "Dragon", 
-        buttonTitle: "Free Download", 
+        buttonTitle: "Watch Now", 
         link: "https://moviebox-drs.netlify.app/"
     },
     { 
